--- a/app/src/main/res/layout/assign_team_item.xml
+++ b/app/src/main/res/layout/assign_team_item.xml
@@ -3,7 +3,6 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="center"
     android:orientation="vertical"
     android:padding="5dp">
 
@@ -12,28 +11,14 @@
         android:layout_height="match_parent"
         android:background="#FFFFFF"
         android:gravity="center"
-        android:orientation="horizontal">
-
-        <Button
-            android:id="@+id/assignTeam_removeButton"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_marginRight="5dp"
-            android:layout_weight="1"
-            android:backgroundTint="#FFFFFF"
-            android:textColor="#000000"
-            app:icon="@android:drawable/ic_delete"
-            app:iconGravity="textStart"
-            app:iconPadding="0dp"
-            app:iconSize="20dp"
-            app:iconTint="#000000"
-            app:strokeColor="#000000"
-            app:strokeWidth="2dp" />
+        android:orientation="horizontal"
+        android:visibility="visible">
 
         <TextView
             android:id="@+id/assignTeam_nameText"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="10dp"
             android:layout_marginRight="5dp"
             android:layout_weight="6"
             android:text="Name Namesson"
@@ -44,7 +29,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:layout_weight="1"
+            android:layout_weight="2.5"
             android:text="32"
             android:textColor="#000000" />
 
@@ -68,7 +53,7 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginRight="5dp"
-            android:layout_weight="2"
+            android:layout_weight="3"
             android:text="UA2141"
             android:textColor="#000000"
             android:visibility="visible" />
@@ -116,9 +101,9 @@
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/checkin_itemInfoHeaders"
+        android:id="@+id/assignTeam_itemInfoHeaders"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="#B3B3B3"
         android:orientation="horizontal"
         android:padding="5dp"
@@ -128,64 +113,80 @@
             android:id="@+id/assignTeam_ContactNameHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:text="Guardian Name"
+            android:text="Guardian\nName"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/assignTeam_ContactPhoneHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:text="Guardian Phone Nr"
+            android:text="Guardian\nPhone Nr"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/assignTeam_ContactEmailHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:text="Guardian Email"
+            android:text="Guardian\nEmail"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/assignTeam_BookingNameHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:text="Booker Name"
+            android:text="Booker\nName"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/assignTeam_BookingPhoneHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
-            android:text="Booker Phone Nr"
+            android:text="Booker\nPhone Nr"
             android:textStyle="bold" />
 
         <TextView
             android:id="@+id/assignTeam_NoteHeader"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="Note"
             android:textStyle="bold" />
+
+        <Space
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0.3" />
     </LinearLayout>
 
     <LinearLayout
-        android:id="@+id/checkin_itemInfoTexts"
+        android:id="@+id/assignTeam_itemInfoTexts"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
+        android:layout_height="wrap_content"
         android:background="#B3B3B3"
+        android:gravity="top"
         android:orientation="horizontal"
-        android:padding="5dp"
+        android:paddingLeft="5dp"
+        android:paddingRight="5dp"
         android:visibility="gone">
 
         <TextView
             android:id="@+id/assignTeam_ContactName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="Nameo Parentson"
             android:textColor="#000000" />
@@ -194,6 +195,7 @@
             android:id="@+id/assignTeam_ContactPhone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="070 123 45 67"
             android:textColor="#000000" />
@@ -202,6 +204,7 @@
             android:id="@+id/assignTeam_ContactEmail"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="nameo_parentson_also_long_embarrassing_adress@email.com"
             android:textColor="#000000" />
@@ -210,14 +213,16 @@
             android:id="@+id/assignTeam_BookingName"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="Nameson Booker"
             android:textColor="#000000" />
 
         <TextView
-            android:id="@+id/assignTeam_BookingEmail"
+            android:id="@+id/assignTeam_BookingPhone"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="073 987 65 43"
             android:textColor="#000000" />
@@ -226,9 +231,28 @@
             android:id="@+id/assignTeam_Note"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
+            android:layout_marginLeft="5dp"
             android:layout_weight="1"
             android:text="Massive noting notington with words and info that's probably important"
             android:textColor="#000000" />
+
+        <Button
+            android:id="@+id/assignTeam_removeButton"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_gravity="bottom"
+            android:layout_marginLeft="5dp"
+            android:layout_marginRight="5dp"
+            android:layout_weight="0.3"
+            android:backgroundTint="#F64E4E"
+            android:textColor="#000000"
+            app:icon="@drawable/ic_baseline_delete_24"
+            app:iconGravity="textStart"
+            app:iconPadding="0dp"
+            app:iconSize="25dp"
+            app:iconTint="#000000"
+            app:strokeColor="#000000"
+            app:strokeWidth="2dp" />
     </LinearLayout>
 
 </LinearLayout>
