--- a/app/src/main/res/navigation/navigation_hub.xml
+++ b/app/src/main/res/navigation/navigation_hub.xml
@@ -20,15 +20,15 @@
         <argument
             android:name="messageEventId"
             app:argType="string" />
-        <argument android:name="messageEvent" />
     </fragment>
     <fragment
         android:id="@+id/eventView"
         android:name="com.example.heroadmin.EventView"
         android:label="fragment_event_view"
-        tools:layout="@layout/fragment_event_view" >
+        tools:layout="@layout/fragment_event_view">
         <argument
             android:name="passedEventId"
+            android:defaultValue="A234"
             app:argType="string" />
     </fragment>
 </navigation>
