--- a/app/src/main/res/layout/assign_team_item.xml
+++ b/app/src/main/res/layout/assign_team_item.xml
@@ -78,12 +78,13 @@
             android:layout_weight="2"
             android:backgroundTint="#FFFFFF"
             android:contentDescription="Info button"
+            android:fontFamily="sans-serif-medium"
             android:textColor="#000000"
-            app:icon="@drawable/ic_warning"
+            app:icon="@drawable/ic_baseline_help_outline_24"
             app:iconGravity="textStart"
             app:iconPadding="0dp"
             app:iconSize="20dp"
-            app:iconTint="#E61F1F"
+            app:iconTint="#000000"
             app:strokeColor="#000000"
             app:strokeWidth="2dp" />
 
