--- a/app/src/main/res/layout/team_listitem.xml
+++ b/app/src/main/res/layout/team_listitem.xml
@@ -15,7 +15,9 @@
         android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp"
         android:layout_weight="5"
-        android:text="Name Nameson" />
+        android:text="Name Nameson"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
     <ImageView
         android:id="@+id/divider"
@@ -34,8 +36,10 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp"
-        android:layout_weight="1"
-        android:text="#16" />
+        android:layout_weight="1.25"
+        android:text="#16"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 
     <ImageView
         android:id="@+id/divider2"
@@ -54,6 +58,8 @@
         android:layout_marginTop="5dp"
         android:layout_marginRight="10dp"
         android:layout_marginBottom="5dp"
-        android:layout_weight="3"
-        android:text="Role" />
+        android:layout_weight="3.1"
+        android:text="Role"
+        android:textColor="#000000"
+        android:textSize="16sp" />
 </LinearLayout>
