--- a/app/src/main/res/layout/fragment_event_view.xml
+++ b/app/src/main/res/layout/fragment_event_view.xml
@@ -17,8 +17,7 @@
 
         <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="0dp"
-            android:layout_weight="0.25"
+            android:layout_height="48dp"
             android:orientation="horizontal">
 
             <LinearLayout
@@ -1019,17 +1018,36 @@
 
             </LinearLayout>
 
-            <Button
-                android:id="@+id/rollRoundButton2"
+            <LinearLayout
                 android:layout_width="0dp"
                 android:layout_height="match_parent"
                 android:layout_weight="1.2"
-                android:backgroundTint="#FFFFFF"
-                android:text="Roll Round"
-                android:textColor="#000000"
-                android:textSize="25sp"
-                app:strokeColor="#000000"
-                app:strokeWidth="2dp" />
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/rollRoundButton2"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="2"
+                    android:backgroundTint="#FFFFFF"
+                    android:text="Roll Round"
+                    android:textColor="#000000"
+                    android:textSize="25sp"
+                    app:strokeColor="#000000"
+                    app:strokeWidth="2dp" />
+
+                <Button
+                    android:id="@+id/cancel_new_round_button"
+                    android:layout_width="match_parent"
+                    android:layout_height="0dp"
+                    android:layout_weight="1"
+                    android:backgroundTint="#FFFFFF"
+                    android:text="Cancel"
+                    android:textColor="#000000"
+                    app:strokeColor="#000000"
+                    app:strokeWidth="2dp" />
+            </LinearLayout>
+
         </LinearLayout>
 
         <LinearLayout
