--- a/app/src/main/res/layout/dropdown_item.xml
+++ b/app/src/main/res/layout/dropdown_item.xml
@@ -1,8 +1,8 @@
-<TextView android:id="@+id/textView3"
+<TextView xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/textView3"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
+    android:layout_height="match_parent"
+    android:padding="5dp"
     android:text="TextView"
-    android:padding="14dp"
     android:textColor="@color/black"
-    android:textSize="16sp"
-    xmlns:android="http://schemas.android.com/apk/res/android" />
+    android:textSize="16sp" />
