--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,4 +11,7 @@
     <color name="mageColor">#6C3CD8</color>
     <color name="rogueColor">#683D20</color>
     <color name="knightColor">#D88E0E</color>
+    <color name="teamBlueColor">#2B80FF</color>
+    <color name="teamRedColor">#ED6363</color>
+
 </resources>
